; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/extr_xfs_btree_trace.c_xfs_btree_trace_argfffi.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/extr_xfs_btree_trace.c_xfs_btree_trace_argfffi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_btree_cur = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.xfs_btree_cur*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32)* }

@XBT_ARGS = common dso_local global i32 0, align 4
@XFS_BTREE_KTRACE_ARGFFFI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xfs_btree_trace_argfffi(i8* %0, %struct.xfs_btree_cur* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca %struct.xfs_btree_cur*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store %struct.xfs_btree_cur* %1, %struct.xfs_btree_cur** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %9, align 8
  %16 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32 (%struct.xfs_btree_cur*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32)*, i32 (%struct.xfs_btree_cur*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32)** %18, align 8
  %20 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %9, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* @XBT_ARGS, align 4
  %23 = load i32, i32* @XFS_BTREE_KTRACE_ARGFFFI, align 4
  %24 = load i32, i32* %14, align 4
  %25 = load i32, i32* %10, align 4
  %26 = ashr i32 %25, 32
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %11, align 4
  %29 = ashr i32 %28, 32
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* %12, align 4
  %32 = ashr i32 %31, 32
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* %13, align 4
  %35 = call i32 %19(%struct.xfs_btree_cur* %20, i8* %21, i32 %22, i32 %23, i32 %24, i32 %26, i32 %27, i32 %29, i32 %30, i32 %32, i32 %33, i32 %34, i32 0, i32 0, i32 0, i32 0)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
